--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -75,16 +75,28 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
+
+#stage1
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.11 as builder
+
+COPY src src
+COPY .mvn .mvn
+COPY --chown=185 mvnw mvnw
+COPY pom.xml .
+
+RUN sh -c ulimit -n 100000
+RUN sh ./mvnw package
+
 FROM registry.access.redhat.com/ubi8/openjdk-11:1.11
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
 
 # We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
+COPY --chown=185 --from=builder /home/jboss/target/quarkus-app/lib/ /deployments/lib/
+COPY --chown=185 --from=builder /home/jboss/target/quarkus-app/*.jar /deployments/
+COPY --chown=185 --from=builder /home/jboss/target/quarkus-app/app/ /deployments/app/
+COPY --chown=185 --from=builder /home/jboss/target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
 USER 185
