--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -80,8 +80,8 @@
 FROM registry.access.redhat.com/ubi8/openjdk-11:1.11 as builder
 
 COPY src src
-COPY .mvn .mvn
-COPY --chown=185 mvnw mvnw
+#COPY .mvn .mvn
+#COPY --chown=185 mvnw mvnw
 COPY pom.xml .
 
 RUN sh -c ulimit -n 100000
