--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -77,7 +77,7 @@
 ###
 
 #stage1
-FROM registry.access.redhat.com/ubi8/openjdk-11:1.11 as builder
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.15-1.1679485219 as builder
 
 COPY src src
 COPY .mvn .mvn
@@ -87,7 +87,7 @@ COPY pom.xml .
 RUN sh -c ulimit -n 100000
 RUN sh ./mvnw package
 
-FROM registry.access.redhat.com/ubi8/openjdk-11:1.11
+FROM registry.access.redhat.com/ubi8/openjdk-11-runtime:1.16-1
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
