--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -80,7 +80,7 @@
 FROM registry.access.redhat.com/ubi8/openjdk-11:1.15-1.1679485219 as builder
 
 COPY src src
-COPY .mvn .mvn
+#COPY .mvn .mvn
 COPY --chown=185 mvnw mvnw
 COPY pom.xml .
 
